--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.3",
     "moment": "^2.30.1",
     "ngx-dabd-grupo01": "^0.0.2",
     "rxjs": "~7.8.0",
