--- a/angular.json
+++ b/angular.json
@@ -34,8 +34,11 @@
             ],
             "styles": [
               "src/styles.scss"
+           
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ]
           },
           "configurations": {
             "production": {
