--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jspdf-autotable": "^3.8.4",
     "moment": "^2.30.1",
     "ngx-dabd-grupo01": "^3.4.1",
+    "ngx-scanner-qrcode": "^1.6.9",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.14.4",
     "tslib": "^2.3.0",
